fix(mobile): fix some sizing glitches on mobiles

--- a/src/components/skillgrid/_skillgrid.scss
+++ b/src/components/skillgrid/_skillgrid.scss
@@ -3,12 +3,27 @@
 // ############################################################################
 
 .shell-skillgrid {
-  margin: 1rem;
+  margin: 1rem 0;
+
+  @include medium {
+    margin: 1rem;
+  }
 
   &__skills {
+    @include scrollbars;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
     gap: 1px;
+    max-height: 400px;
+    overflow: auto;
+
+    @include medium {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include large {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 
   &__skill {
